# fmmax-notes

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: build-ci.yml
docs/: _config.yml  _toc.yml  index.md
docs/notebooks/: formulations.ipynb
